# ros-clang-instrumentation

./: LICENSE  README.md
llvm-passes/: CMakeLists.txt
llvm-passes/ballLarus/: CMakeLists.txt  pass.cpp  runtime.c
llvm-passes/ros/: CMakeLists.txt  ros.cpp
ros_ws/: catkin_make_with_instrumentation.sh
ros_ws/src/ros_instrumentation/: CMakeLists.txt  package.xml
ros_ws/src/ros_instrumentation/scripts/: results.py
ros_ws/src/ros_instrumentation/src/: rtlib.cpp
ros_ws/src/test1/: CMakeLists.txt  package.xml
ros_ws/src/test1/launch/: test.launch
ros_ws/src/test1/src/: talker.cpp
ros_ws/src/test1/test/: config.yaml
ros_ws/src/test2/: CMakeLists.txt  package.xml
ros_ws/src/test2/launch/: test.launch
ros_ws/src/test2/src/: talkerAndListener.cpp
ros_ws/src/test2/test/: config.yaml
ros_ws/src/test3/: CMakeLists.txt  package.xml
ros_ws/src/test3/launch/: test.launch
ros_ws/src/test3/src/: listener.cpp  repeater.cpp  talker.cpp
ros_ws/src/test3/test/: config.yaml
